[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/holygades_background.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/RockTile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Intro.gd" type="Script" id=5]
[ext_resource path="res://Scenes/EnenmyWeek.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/PlayerUI.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://res/BalsamiqSans-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://res/BalsamiqSans-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[node name="Intro" type="Node"]
script = ExtResource( 5 )

[node name="IntroGame" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="IntroGame"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="IntroGame/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="IntroGame"]
layer = 100

[node name="HelpControlePlayer" type="Label" parent="IntroGame/ParallaxBackground"]
modulate = Color( 0.0627451, 0.529412, 0.113725, 1 )
margin_left = 14.1832
margin_top = 610.387
margin_right = 554.183
margin_bottom = 2092.39
custom_fonts/font = SubResource( 2 )
text = "Hi!

The big mission in this game that just only 
defeat the enemy and walk through the door.

If you can, you can collect as many coins as
possible to get the point.

Be careful for the traps

If your HP go to 0 then you die


//////////////////////////////////////////////////////

HOW TO PLAY?

1) JUMP:
 Click the \"Space\" key or \"Up\" key  to jump



2) DOUBLE JUMP:
 You can also click double time to your 
\"Space\" key  to make a double Jump or
\"Up\" + \"Space\" for double jump too


3) LEFT - RIGHT:
 Click \"Left\" key and \"Right\"  key to go 
left and right

And

\"Up\" + \"Left\" to jump left
\"Up\" + \"Right\" to jump right


4) ATTACK:
Click \"J\" key to attack

5) PICK:
Click \"M\" key to pick an item
\"N\" key to drop that item
\"K\" key  to throw the item

6) FIRE BALL:
\"Q\" key to shoot a fireball in left
\"W\" key to shoot a fireball in right
p/s:
You can shoot no limit the fireballs





"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="IntroGame"]
modulate = Color( 0.0392157, 0.701961, 0.0470588, 1 )
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "RETURN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Node2D" parent="."]

[node name="TileMap" parent="Play" instance=ExtResource( 2 )]

[node name="RockTile" parent="Play" instance=ExtResource( 3 )]

[node name="Player" parent="Play" instance=ExtResource( 4 )]
position = Vector2( 415.159, 331.414 )

[node name="Position2D" parent="Play/Player" index="0"]
position = Vector2( 1.05274, -3.96638 )

[node name="EnenmyWeek" parent="Play" instance=ExtResource( 6 )]
position = Vector2( 734.943, 183.315 )

[node name="Stats" parent="Play/EnenmyWeek" index="6"]
max_health = 20

[node name="PlayerUI" parent="Play" instance=ExtResource( 7 )]
[connection signal="pressed" from="IntroGame/Return" to="Play/Player" method="_on_Return_pressed"]
[connection signal="pressed" from="IntroGame/Return" to="." method="_on_Return_pressed"]

[editable path="Play/Player"]

[editable path="Play/EnenmyWeek"]
